--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,9 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "allowSyntheticDefaultImports": true,
     "lib": ["ES2022", "dom"],
+    "types": ["localforage"],
     "paths": {
       "@env": ["src/environments/environment.ts"],
       "@app": ["src/app/app.service.ts"],
