--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "localforage": "^1.10.0",
+    "monaco-editor": "^0.40.0",
     "ng-packagr": "^16.0.0",
     "prettier": "^3.0.0",
-    "typescript": "~5.1.3",
-    "monaco-editor": "^0.40.0",
-    "localforage": "^1.10.0"
+    "typescript": "~5.1.3"
   }
 }
