--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
       "@app": ["src/app/app.service.ts"],
       "@common/*": ["src/common/*"],
       "@weplanx/ng": ["library/public-api.ts"],
+      "@weplanx/ng/upload": ["library/upload/public-api.ts"],
       "@weplanx/ng/table": ["library/table/public-api.ts"]
     }
   },
