--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/app"
+    "outDir": "./out-tsc/app",
+    "types": ["@angular/localize", "localforage"]
   },
   "files": ["src/main.ts"],
   "include": ["src/**/*.d.ts"]
