--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "start": "ng s",
     "build": "ng b --configuration production",
-    "build:ng": "ng b angular"
+    "build:ng": "ng b angular",
+    "i18n": "ng extract-i18n --output-path src/locale",
+    "preview:zh": "ng s --configuration zh"
   },
   "private": false,
   "dependencies": {
@@ -31,6 +33,7 @@
     "@angular-eslint/template-parser": "16.1.0",
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
+    "@angular/localize": "^16.1.4",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
