--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
+    "cropperjs": "^1.5.13",
     "esbuild-plugin-less": "^1.2.1",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
