--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "ng-zorro-antd": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "cropperjs": "^1.5.13"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.4",
@@ -37,7 +38,6 @@
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
-    "cropperjs": "^1.5.13",
     "esbuild-plugin-less": "^1.2.1",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
