--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@antv/g2plot": "^2.4.31",
+    "cropperjs": "^1.5.13",
     "ng-zorro-antd": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0",
-    "cropperjs": "^1.5.13"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.4",
