--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
       "@weplanx/ng/filebrowser": ["library/filebrowser/public-api.ts"],
       "@weplanx/ng/upload": ["library/upload/public-api.ts"],
       "@weplanx/ng/richtext": ["library/richtext/public-api.ts"],
-      "@weplanx/ng/table": ["library/table/public-api.ts"]
+      "@weplanx/ng/table": ["library/table/public-api.ts"],
+      "@weplanx/ng/list": ["library/list/public-api.ts"]
     }
   },
   "angularCompilerOptions": {
