--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/styles.less"],
             "scripts": [],
-            "allowedCommonJsDependencies": ["size-sensor", "d3-regression", "fmin", "pdfast"],
+            "allowedCommonJsDependencies": ["size-sensor", "d3-regression", "fmin", "pdfast", "cron-parser"],
             "localize": true
           },
           "configurations": {
