--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@antv/g2plot": "^2.4.31",
+    "cron-parser": "^4.9.0",
     "cropperjs": "^1.5.13",
     "ng-zorro-antd": "^16.1.0",
     "rxjs": "~7.8.0",
