--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "paths": {
       "@env": ["src/environments/environment.ts"],
       "@app": ["src/app/app.service.ts"],
-      "@common/*": ["src/common/*"],
+      "@common/*": ["src/app/common/*"],
       "@weplanx/ng": ["library/public-api.ts"],
       "@weplanx/ng/keyword": ["library/keyword/public-api.ts"],
       "@weplanx/ng/toolbox": ["library/toolbox/public-api.ts"],
