--- a/package.json
+++ b/package.json
@@ -6,40 +6,49 @@
     "build": "ng b --configuration production",
     "build:ng": "ng b angular",
     "i18n": "ng extract-i18n --output-path src/locale",
-    "preview:zh": "ng s --configuration zh"
+    "preview:zh": "ng s --configuration zh",
+    "build:ssr": "npm run build && ng run console:server",
+    "serve:ssr": "node dist/console/server/main.js"
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "^16.2.0",
-    "@angular/cdk": "^16.2.0",
-    "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@angular/forms": "^16.2.0",
-    "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/router": "^16.2.0",
+    "@angular/animations": "~16.1.0",
+    "@angular/cdk": "~16.1.0",
+    "@angular/common": "~16.1.0",
+    "@angular/compiler": "~16.1.0",
+    "@angular/core": "~16.1.0",
+    "@angular/forms": "~16.1.0",
+    "@angular/platform-browser": "~16.1.0",
+    "@angular/platform-browser-dynamic": "~16.1.0",
+    "@angular/platform-server": "~16.1.0",
+    "@angular/router": "~16.1.0",
     "@antv/g2plot": "^2.4.31",
+    "@nguniversal/express-engine": "~16.1.0",
     "cron-parser": "^4.9.0",
-    "cropperjs": "^1.5.13",
-    "ng-zorro-antd": "^16.1.0",
+    "express": "^4.15.2",
+    "idb-keyval": "^6.2.1",
+    "ng-zorro-antd": "~16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular-devkit/build-angular": "~16.1.0",
     "@angular-eslint/builder": "16.1.0",
     "@angular-eslint/eslint-plugin": "16.1.0",
     "@angular-eslint/eslint-plugin-template": "16.1.0",
     "@angular-eslint/schematics": "16.1.0",
     "@angular-eslint/template-parser": "16.1.0",
-    "@angular/cli": "~16.2.0",
-    "@angular/compiler-cli": "^16.2.0",
-    "@angular/localize": "^16.2.0",
+    "@angular/cli": "~16.1.0",
+    "@angular/compiler-cli": "~16.1.0",
+    "@angular/localize": "~16.1.0",
+    "@nguniversal/builders": "~16.1.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
+    "cropperjs": "^1.5.13",
     "esbuild-plugin-less": "^1.2.1",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
@@ -51,7 +60,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "localforage": "^1.10.0",
     "monaco-editor": "^0.40.0",
     "ng-packagr": "^16.0.0",
     "prettier": "^3.0.0",
