--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,10 +1,9 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.app.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/app",
+    "outDir": "./out-tsc/server",
     "types": ["node", "@angular/localize"]
   },
-  "files": ["src/main.ts"],
-  "include": ["src/**/*.d.ts"]
+  "files": ["src/main.server.ts", "server.ts"]
 }
