--- a/angular.json
+++ b/angular.json
@@ -65,12 +65,6 @@
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true,
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.dev.ts"
-                }
-              ],
               "localize": ["zh-Hans"],
               "baseHref": "/zh-Hans"
             },
@@ -139,13 +133,7 @@
               "optimization": false,
               "sourceMap": true,
               "extractLicenses": false,
-              "vendorChunk": true,
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.dev.ts"
-                }
-              ]
+              "vendorChunk": true
             }
           },
           "defaultConfiguration": "production"
