--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "ng b --configuration production",
     "build:ng": "ng b angular",
     "i18n": "ng extract-i18n --output-path src/locale",
-    "preview:zh": "ng s --configuration zh",
+    "preview:en": "ng s --configuration en",
     "build:ssr": "npm run build && ng run console:server",
     "serve:ssr": "node dist/console/server/main.js"
   },
@@ -18,6 +18,7 @@
     "@angular/compiler": "~16.1.0",
     "@angular/core": "~16.1.0",
     "@angular/forms": "~16.1.0",
+    "@angular/localize": "~16.1.0",
     "@angular/platform-browser": "~16.1.0",
     "@angular/platform-browser-dynamic": "~16.1.0",
     "@angular/platform-server": "~16.1.0",
@@ -41,7 +42,6 @@
     "@angular-eslint/template-parser": "16.1.0",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "~16.1.0",
-    "@angular/localize": "~16.1.0",
     "@nguniversal/builders": "~16.1.0",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
