--- a/angular.json
+++ b/angular.json
@@ -53,6 +53,12 @@
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ],
               "localize": ["zh-Hans"],
               "baseHref": "/zh-Hans"
             },
