--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "allowSyntheticDefaultImports": true,
     "lib": ["ES2022", "dom"],
     "paths": {
-      "@env": ["src/environment.ts"],
+      "@env": ["src/environments/environment.ts"],
       "@app": ["src/app/app.service.ts"],
       "@common/*": ["src/app/common/*"],
       "@weplanx/ng": ["library/public-api.ts"],
