--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~16.2.5",
     "@angular/platform-browser-dynamic": "~16.2.5",
     "@angular/router": "~16.2.5",
+    "@angular/service-worker": "~16.2.5",
     "@antv/g2plot": "^2.4.31",
     "cron-parser": "^4.9.0",
     "idb-keyval": "^6.2.1",
