--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,7 @@
             "assets": ["src/favicon.ico", "src/assets", "src/manifest.webmanifest"],
             "styles": ["src/styles.less"],
             "scripts": [],
-            "allowedCommonJsDependencies": ["size-sensor", "d3-regression", "fmin", "pdfast", "cron-parser"],
-            "localize": true,
-            "i18nMissingTranslation": "error"
+            "allowedCommonJsDependencies": ["size-sensor", "d3-regression", "fmin", "pdfast", "cron-parser"]
           },
           "configurations": {
             "production": {
@@ -58,19 +56,7 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.development.ts"
                 }
-              ],
-              "localize": ["zh-Hans"],
-              "baseHref": "/zh-Hans"
-            },
-            "en": {
-              "buildOptimizer": false,
-              "optimization": false,
-              "vendorChunk": true,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true,
-              "localize": ["en-US"],
-              "baseHref": "/en-US"
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -83,9 +69,6 @@
             },
             "development": {
               "browserTarget": "console:build:development"
-            },
-            "en": {
-              "browserTarget": "console:build:en"
             }
           },
           "options": {
@@ -117,15 +100,6 @@
           "builder": "@angular-eslint/builder:lint",
           "options": {
             "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
-          }
-        }
-      },
-      "i18n": {
-        "sourceLocale": "zh-Hans",
-        "locales": {
-          "en-US": {
-            "translation": "src/locale/messages.en-US.xlf",
-            "baseHref": "en-US/"
           }
         }
       }
