--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cron-parser": "^4.9.0",
     "date-fns": "^2.30.0",
     "idb-keyval": "^6.2.1",
+    "joi": "^17.11.0",
     "ng-zorro-antd": "16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
