update: auto-deploy for project overview

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
             "accessibility": "explicit"
           }
         ],
+        "@typescript-eslint/no-empty-function": "off",
         "@typescript-eslint/no-floating-promises": "off",
         "@typescript-eslint/no-for-in-array": "error",
         "@typescript-eslint/no-inferrable-types": [
