--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "~16.2.5",
-    "@angular/cdk": "~16.2.5",
-    "@angular/common": "~16.2.5",
-    "@angular/compiler": "~16.2.5",
-    "@angular/core": "~16.2.5",
-    "@angular/forms": "~16.2.5",
-    "@angular/platform-browser": "~16.2.5",
-    "@angular/platform-browser-dynamic": "~16.2.5",
-    "@angular/router": "~16.2.5",
+    "@angular/animations": "~17.0.3",
+    "@angular/cdk": "~17.0.1",
+    "@angular/common": "~17.0.3",
+    "@angular/compiler": "~17.0.3",
+    "@angular/core": "~17.0.3",
+    "@angular/forms": "~17.0.3",
+    "@angular/platform-browser": "~17.0.3",
+    "@angular/platform-browser-dynamic": "~17.0.3",
+    "@angular/router": "~17.0.3",
     "@antv/g2plot": "^2.4.31",
     "cron-parser": "^4.9.0",
     "date-fns": "^2.30.0",
@@ -26,23 +26,23 @@
     "ng-zorro-antd": "16.2.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~16.2.5",
-    "@angular-eslint/builder": "16.2.0",
-    "@angular-eslint/eslint-plugin": "16.3.1",
-    "@angular-eslint/eslint-plugin-template": "16.3.1",
-    "@angular-eslint/schematics": "16.3.1",
-    "@angular-eslint/template-parser": "16.3.1",
-    "@angular/cli": "~16.2.5",
-    "@angular/compiler-cli": "~16.2.5",
+    "@angular-devkit/build-angular": "~17.0.1",
+    "@angular-eslint/builder": "17.1.0",
+    "@angular-eslint/eslint-plugin": "17.1.0",
+    "@angular-eslint/eslint-plugin-template": "17.1.0",
+    "@angular-eslint/schematics": "17.1.0",
+    "@angular-eslint/template-parser": "17.1.0",
+    "@angular/cli": "~17.0.1",
+    "@angular/compiler-cli": "~17.0.3",
     "@types/jasmine": "~4.3.0",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "cropperjs": "^1.5.13",
     "esbuild-plugin-less": "^1.2.1",
-    "eslint": "^8.51.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
@@ -53,8 +53,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "monaco-editor": "^0.40.0",
-    "ng-packagr": "^16.0.0",
+    "ng-packagr": "^17.0.1",
     "prettier": "^3.0.0",
-    "typescript": "~5.1.3"
+    "typescript": "~5.2.2"
   }
 }
